[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regintelenv"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "cascade_rl", "tasks.py", "grader.py", "models.py", "inference.py", "client.py", "check_demo.py"]